# otus_homework_1

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  azure-pipelines.yml
src/: main.cpp
src_test/: test_version.cpp
